fix: layout shift spawns scroll

--- a/static/global.css
+++ b/static/global.css
@@ -16,10 +16,9 @@ body {
     Helvetica Neue,
     sans-serif;
 
-  display: flex;
-  justify-content: center;
-  min-height: 100vh;
-  min-width: 100vw;
+  position: relative;
+  overflow-y: auto;
+  height: 100%;
 
   background-color: #8ec5fc;
   background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
